--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,31 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html, body {
+    height: 100vh;
+    background-color: #F3E6D5;
+    border: 3px solid red;
+    margin: 0;
+    padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.main{
+    margin: 1%;
+    height: 100%;
+    border: 3px solid black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.leftContainer{
+    background-color:blue;
+    width:35%;
+    float: left;
+    margin: 1%
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.rightContainer{
+    background-color:yellow;
+    width:60%;
+    float: left;
+    margin: 1%;
+    height: 100%;
 }
